# oifits

./: .gitignore  LICENSE  README.md  base.py  oi.py  oi_array.py  oi_flux.py  pyproject.toml
oifits/: __init__.py  __init__.pyi  base.py  oi.py  oi_array.py  oi_flux.py  oi_t3.py  oi_vis.py  oi_vis2.py  oi_wavelength.py
oifits/tools/: gen_pyi.py
