[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oifits"
description = "A minimal Python library for reading OIFITS files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "the oifits authors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.21",
    "astropy>=5.0",
]
requires-python = ">=3.10"
dynamic = ["version"]

[tool.setuptools]
packages = ["oifits"]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = {attr = "oifits.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]